[gd_scene format=3 uid="uid://b6uyukpo6b8o8"]

[ext_resource type="Script" uid="uid://byv4cd8g8xp3q" path="res://game_over_screen.gd" id="1_iwahs"]
[ext_resource type="FontFile" uid="uid://e5m5n1e38d1e" path="res://assets/Gameboi95.ttf" id="2_4tlw3"]
[ext_resource type="Texture2D" uid="uid://owg0ldj1m2mk" path="res://assets/mascara_1.png" id="3_ej65t"]
[ext_resource type="Texture2D" uid="uid://dhgq12sd0p2dx" path="res://assets/corre-cole mascara1.png" id="4_8i476"]
[ext_resource type="Texture2D" uid="uid://c36lxqpb23f18" path="res://assets/corre-cole mascara2.png" id="5_ktv0q"]
[ext_resource type="Texture2D" uid="uid://dtsx1e6nhg5ip" path="res://assets/corre-cole mascara3.png" id="6_x8ovf"]
[ext_resource type="Texture2D" uid="uid://deblyx5lcx3xx" path="res://assets/pena_aplicada.png" id="7_q3lui"]
[ext_resource type="Texture2D" uid="uid://d1ol3sjq0iriy" path="res://assets/chifres_aplicados.png" id="8_cb3on"]
[ext_resource type="Texture2D" uid="uid://cfpetv80ofmf0" path="res://assets/glitter_aplicado.png" id="9_jslh1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6jbl"]
bg_color = Color(0.9981211, 0.7073714, 0.3811209, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 8
shadow_offset = Vector2(6, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqyhg"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(0, 0, 0.6745098, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tlw3"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(0, 0, 0.5647059, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej65t"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(0.01570699, 0.24841484, 0.9999997, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="GameOverScreen" type="CanvasLayer" unique_id=387358060]
process_mode = 3
script = ExtResource("1_iwahs")

[node name="ColorRect" type="Panel" parent="." unique_id=1890185694]
offset_left = 112.0
offset_top = 65.0
offset_right = 938.0
offset_bottom = 556.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n6jbl")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1107595109]
offset_left = 119.0
offset_top = 71.0
offset_right = 922.0
offset_bottom = 537.0
theme_override_constants/separation = 120
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer" unique_id=1776295209]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("2_4tlw3")
theme_override_font_sizes/font_size = 48
text = "O Bloco Passou!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer" unique_id=569356711]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_4tlw3")
theme_override_font_sizes/font_size = 31
text = "Pontos: 000"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1935278312]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=39969356]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4tlw3")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rqyhg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4tlw3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ej65t")
theme_override_styles/focus = SubResource("StyleBoxFlat_rqyhg")
text = "Reiniciar"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1741100514]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4tlw3")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rqyhg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4tlw3")
theme_override_styles/hover = SubResource("StyleBoxFlat_ej65t")
theme_override_styles/focus = SubResource("StyleBoxFlat_rqyhg")
text = "   Sair   "

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1165545445]
modulate = Color(0.99607843, 0, 0, 1)
position = Vector2(162.99998, 103)
rotation = -0.30778936
scale = Vector2(4.3898287, 4.3898287)
texture = ExtResource("3_ej65t")

[node name="Sprite2D2" type="Sprite2D" parent="." unique_id=2031691817]
modulate = Color(0, 0.5137255, 0, 1)
position = Vector2(820, 475)
rotation = -0.13775307
scale = Vector2(4.3898287, 4.3898287)
texture = ExtResource("4_8i476")

[node name="Sprite2D3" type="Sprite2D" parent="." unique_id=1407746617]
modulate = Color(1, 0, 0.99607843, 1)
position = Vector2(197, 471)
rotation = 0.11089665
scale = Vector2(4.3898287, 4.3898287)
texture = ExtResource("5_ktv0q")

[node name="Sprite2D4" type="Sprite2D" parent="." unique_id=280540213]
modulate = Color(0, 0, 0.99607843, 1)
position = Vector2(818, 148)
rotation = 0.5275272
scale = Vector2(4.3898287, 4.3898287)
texture = ExtResource("6_x8ovf")

[node name="PenaAplicada" type="Sprite2D" parent="." unique_id=249949426]
position = Vector2(203.00009, 471.00003)
scale = Vector2(3.5581396, 3.5581396)
texture = ExtResource("7_q3lui")

[node name="ChifresAplicados" type="Sprite2D" parent="." unique_id=806086629]
position = Vector2(821.00006, 467)
rotation = -0.20301905
scale = Vector2(4.3255816, 4.3255816)
texture = ExtResource("8_cb3on")

[node name="GlitterAplicado" type="Sprite2D" parent="." unique_id=771238499]
position = Vector2(813.00006, 154.00005)
rotation = 0.28684327
scale = Vector2(3.3488371, 3.1744187)
texture = ExtResource("9_jslh1")
